sorted/tests/03-out-of-order.stderr
error: SomethingFailed should sort before ThisFailed
  --> tests/03-out-of-order.rs:16:1
   |
16 | #[sorted]
   | ^^^^^^^^^
   |
   = note: this error originates in the attribute macro `sorted` (in Nightly builds, run with -Z macro-backtrace for more info)
